# todo-list-practice-2

./: README.md
backend/: .gitignore  alembic.ini  app.py  auth.py  pyproject.toml
backend/alembic/versions/: 5c41579a7c4a_create_project.py  a719da8b79b3_create_todos.py  d18247e2bef6_create_user.py  e0e3385080e5_create_project_members_pivot_tabel.py
backend/models/: __init__.py  paginate.py  project_members.py  projects.py  todos.py  users.py
backend/routes/: project.py  todo.py  token.py  user.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yaml
frontend/src/: config.tsx
